make directional + modulating linked receivers scale signal strength instead of using it as an upper bound